<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="signinModel"
            type="com.test.apolloclient.ui.main.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_md"
        tools:context=".ui.signup.ForgotPasswordFragment">

        <TextView
            android:id="@+id/txtTitleWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md"
            android:text="Sign In"
            android:textSize="@dimen/margin_xxl"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtTitleEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="Email"
            app:layout_constraintTop_toBottomOf="@id/txtTitleWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/margin_md"
            android:text="@={signinModel.email}"
            app:layout_constraintTop_toBottomOf="@id/txtTitleEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtEmailErr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{signinModel.emailError ? View.VISIBLE : View.INVISIBLE}"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="Please enter email"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtTitlePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md"
            android:text="Password"
            app:layout_constraintTop_toBottomOf="@id/txtEmailErr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@={signinModel.password}"
            android:layout_margin="@dimen/margin_md"
            app:layout_constraintTop_toBottomOf="@id/txtTitlePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtPasswordErr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{signinModel.passwordError ? View.VISIBLE : View.INVISIBLE}"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="Please enter password"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginBottom="@dimen/margin_md"
            android:text="Sign In"
            android:onClick="@{() -> signinModel.btnSubmitPressed()}"
            app:layout_constraintTop_toBottomOf="@id/txtPasswordErr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
